--- a/teaching.html
+++ b/teaching.html
@@ -72,7 +72,7 @@
 									<header>
 										<h2><a href="#">Current courses</a></h2>
 										<p>
-                                            I currently teach the following courses at Leibniz Universität Hannover (alternating between the summer and winter semesters).
+                                            I currently teach the following courses at the University of Glasgow and the University of Bergamo.
 										</p>
 									</header>
 <!--									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>-->
@@ -90,44 +90,60 @@
                                             Download the slides <a href="slides/short_course_Bergamo/ShortCourse.html">here</a>
                                         </p>
                                     </section>
-									<section>
-										<header>
-											<h3>Big Geospatial Data</h3>
-										</header>
-										<p>
-											Leibniz University Hannover, since 2019, Master program Geodesy and Geoinformatics, and Mechatronics
-										</p>
-                                        <p>
-                                        First, basics in spatial data analysis and mining are discussed, along with methods to draw conclusions from (geospatial) data. Further, fundamentals of parallel computing are discussed, that is when algorithms can be processed in parallel, computational complexity, and methods of parallel computing. Following this, established approaches to process spatial data are covered. For that, aggregation functions (e.g. mean values, local entropy, rasterization, hotspot detection), data locality, statistical testing, and other topics are discussed based on examples and selected scientific papers.
-                                        </p>
-									</section>
                                     <section>
                                         <header>
-                                            <h3>Statistical Data Science</h3>
+                                            <h3>Probability and Sampling Fundamentals</h3>
                                         </header>
                                         <p>
-                                            Leibniz University Hannover, since 2021, Master program Geodesy and Geoinformatics
-                                        </p>
-                                        <p>
-                                        This module aims to learn about statistical hypothesis testing and modelling in Data Science. The course covers parametric and non-parametric statistical approaches to deal with dependent discrete and continuous data. A particular focus is on how to derive statistically valid conclusions about the underlying random process. After completing the course, the students know which statistical methods are suitable for analysing different data sets. Moreover, they know how to apply these models using the software R.
+                                            University of Glasgow
                                         </p>
                                     </section>
                                     <section>
                                         <header>
-                                            <h3>Monitoring Spatiotemporal and Network Data (Seminar)</h3>
+                                            <h3>Generalised Linear Models</h3>
                                         </header>
                                         <p>
-                                            Leibniz University Hannover, since 2019, Master program Geodesy and Geoinformatics, and Computational Methods in Engineering
-                                        </p>
-                                        First, we discuss several concepts related to the reliability of networks and the temporal monitoring of spatiotemporal data. In particular, the focus is on procedures to detect deviations of an observed process from a specific target process, where the target process is a spatiotemporal stochastic process or has a complex network structure. Furthermore, statistical process control and control charts are introduced as essential tools. In the second part, the students work on a seminar paper discussing selected methods and procedures. These papers should include a literature review and a small simulation study or practical application. Then, based on a double-blind review (each participant writes a report) and discussing the results in a colloquium, the students can revise their seminar papers before the final submission.
+                                            University of Glasgow
                                         </p>
                                     </section>
                                     <header>
                                         <h2><a href="#">Previous courses</a></h2>
                                         <p>
-                                        Below I list all the courses I have held in the past (University of Göttingen, University Hannover, European University Viadrina).
+                                        Below I list all the courses I have held in the past (Leibniz University Hannover, University of Göttingen, European University Viadrina).
                                     </p>
-                                </header>
+                                    </header>
+                                        <section>
+                                            <header>
+                                                <h3>Big Geospatial Data</h3>
+                                            </header>
+                                            <p>
+                                                Leibniz University Hannover, since 2019, Master program Geodesy and Geoinformatics, and Mechatronics
+                                            </p>
+                                            <p>
+                                            First, basics in spatial data analysis and mining are discussed, along with methods to draw conclusions from (geospatial) data. Further, fundamentals of parallel computing are discussed, that is when algorithms can be processed in parallel, computational complexity, and methods of parallel computing. Following this, established approaches to process spatial data are covered. For that, aggregation functions (e.g. mean values, local entropy, rasterization, hotspot detection), data locality, statistical testing, and other topics are discussed based on examples and selected scientific papers.
+                                            </p>
+                                        </section>
+                                        <section>
+                                            <header>
+                                                <h3>Statistical Data Science</h3>
+                                            </header>
+                                            <p>
+                                                Leibniz University Hannover, since 2021, Master program Geodesy and Geoinformatics
+                                            </p>
+                                            <p>
+                                            This module aims to learn about statistical hypothesis testing and modelling in Data Science. The course covers parametric and non-parametric statistical approaches to deal with dependent discrete and continuous data. A particular focus is on how to derive statistically valid conclusions about the underlying random process. After completing the course, the students know which statistical methods are suitable for analysing different data sets. Moreover, they know how to apply these models using the software R.
+                                            </p>
+                                        </section>
+                                        <section>
+                                            <header>
+                                                <h3>Monitoring Spatiotemporal and Network Data (Seminar)</h3>
+                                            </header>
+                                            <p>
+                                                Leibniz University Hannover, since 2019, Master program Geodesy and Geoinformatics, and Computational Methods in Engineering
+                                            </p>
+                                            First, we discuss several concepts related to the reliability of networks and the temporal monitoring of spatiotemporal data. In particular, the focus is on procedures to detect deviations of an observed process from a specific target process, where the target process is a spatiotemporal stochastic process or has a complex network structure. Furthermore, statistical process control and control charts are introduced as essential tools. In the second part, the students work on a seminar paper discussing selected methods and procedures. These papers should include a literature review and a small simulation study or practical application. Then, based on a double-blind review (each participant writes a report) and discussing the results in a colloquium, the students can revise their seminar papers before the final submission.
+                                            </p>
+                                        </section>
                                         <section>
                                             <header>
                                                 <h3>Statistics (in German)</h3>
