--- a/research.html
+++ b/research.html
@@ -93,7 +93,7 @@
                                     </p>
                                     <p>
                                         <ul>
-                                            <li> <strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2023): A Dynamic Spatiotemporal Stochastic Volatility Model with an Application to Environmental Risks. Econometrics and Statistics (to appear)</li>
+                                            <li> <strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2023): A Dynamic Spatiotemporal Stochastic Volatility Model with an Application to Environmental Risks. Econometrics and Statistics <a href="https://doi.org/10.1016/j.ecosta.2023.11.002">(DOI)</a></li>
                                             <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2023): Statistical process monitoring of artificial neural networks. Technometrics <a href="https://doi.org/10.1080/00401706.2023.2239886">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2023): Dynamic Spatiotemporal ARCH Models. Spatial Economic Analysis <a href="https://doi.org/10.1080/17421772.2023.2254817">(DOI)</a></li>
                                             <li> Fülle, M., <strong>Otto, P.</strong> (2023): Spatial GARCH Models for Unknown Spatial Locations – An Application to Financial Stock Returns. Spatial Economic Analysis <a href="https://doi.org/10.1080/17421772.2023.2237067">(DOI)</a></li>
