--- a/research.html
+++ b/research.html
@@ -93,6 +93,7 @@
                                     </p>
                                     <p>
                                         <ul>
+                                            <li> <strong>Otto, P.</strong>, Alessandro Fusta Moro, Jacopo Rodeschini, Qendrim Shaboviq, Rosaria Ignaccolo, Natalia Golini, Michela Cameletti, Paolo Maranzano, Francesco Finazzi, Alessandro Fassò (2023): Spatiotemporal modelling of PM<sub>2.5</sub> concentrations in Lombardy (Italy) -- A comparative study. Environmental and Ecological Statistics (accepted)</li>
                                             <li> <strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2023): A Dynamic Spatiotemporal Stochastic Volatility Model with an Application to Environmental Risks. Econometrics and Statistics <a href="https://doi.org/10.1016/j.ecosta.2023.11.002">(DOI)</a></li>
                                             <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2023): Statistical process monitoring of artificial neural networks. Technometrics <a href="https://doi.org/10.1080/00401706.2023.2239886">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2023): Dynamic Spatiotemporal ARCH Models. Spatial Economic Analysis <a href="https://doi.org/10.1080/17421772.2023.2254817">(DOI)</a></li>
