--- a/research.html
+++ b/research.html
@@ -89,11 +89,19 @@
 									<!-- <a href="#" class="image featured"><img src="images/panorama.jpg" alt="" /></a> -->
                                     <h3>Peer-reviewed journals</h3>
                                     <p>
+                                    2024
+                                    </p>
+                                    <p>
+                                        <ul>
+                                            <li> Mattera, R., <strong>Otto, P.</strong> (2024): Network log-ARCH models for forecasting stock market volatility. International Journal of Forecasting (forthcoming)</li>
+                                            <li> <strong>Otto, P.</strong>, Alessandro Fusta Moro, Jacopo Rodeschini, Qendrim Shaboviq, Rosaria Ignaccolo, Natalia Golini, Michela Cameletti, Paolo Maranzano, Francesco Finazzi, Alessandro Fassò (2024): Spatiotemporal modelling of PM<sub>2.5</sub> concentrations in Lombardy (Italy) -- A comparative study. Environmental and Ecological Statistics <a href="https://doi.org/10.1007/s10651-023-00589-0">(DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <p>
                                     2023
                                     </p>
                                     <p>
                                         <ul>
-                                            <li> <strong>Otto, P.</strong>, Alessandro Fusta Moro, Jacopo Rodeschini, Qendrim Shaboviq, Rosaria Ignaccolo, Natalia Golini, Michela Cameletti, Paolo Maranzano, Francesco Finazzi, Alessandro Fassò (2023): Spatiotemporal modelling of PM<sub>2.5</sub> concentrations in Lombardy (Italy) -- A comparative study. Environmental and Ecological Statistics (accepted)</li>
                                             <li> <strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2023): A Dynamic Spatiotemporal Stochastic Volatility Model with an Application to Environmental Risks. Econometrics and Statistics <a href="https://doi.org/10.1016/j.ecosta.2023.11.002">(DOI)</a></li>
                                             <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2023): Statistical process monitoring of artificial neural networks. Technometrics <a href="https://doi.org/10.1080/00401706.2023.2239886">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2023): Dynamic Spatiotemporal ARCH Models. Spatial Economic Analysis <a href="https://doi.org/10.1080/17421772.2023.2254817">(DOI)</a></li>
