--- a/cv.html
+++ b/cv.html
@@ -130,11 +130,11 @@
                                   <dt><b>Associate editor:</b></dt>
                                   <dd>Environmetrics, AStA Advances in Statistical Analysis, AStA Wirtschafts- und Sozialstatistisches Archiv</dd>
                                   <dt><b>Elected member:</b></dt>
-                                  <dd>Junge Braunschweigische Wissenschaftliche Gesellschaft</dd>
+                                  <dd>The Young Braunschweig Scientific Society</dd>
                                   <dt><b>Treasurer and board member:</b></dt>
                                   <dd>German Statistical Society</dd>
                                   <dt><b>Member:</b></dt>
-                                  <dd>ASA, German Statistical Society, The International Environmetrics Society, International Association for Statistical Computing, among others</dd>
+                                  <dd>The Royal Statistical Society, German Statistical Society, The International Environmetrics Society (TIES), International Association for Statistical Computing, among others</dd>
                                   <dt><b>Reviewer:</b></dt>
                                   <dd>German Research Foundation, Journal of Econometrics, Environmetrics Econometrics and Statistics, Annals of Regional Science, Atmospheric Environment, Journal of Business and Economic Statistics, among others</dd>
                                 </dl>
