--- a/research.html
+++ b/research.html
@@ -96,6 +96,7 @@
                                             <li> Mattera, R., <strong>Otto, P.</strong> (2024): Network log-ARCH models for forecasting stock market volatility. International Journal of Forecasting <a href="https://doi.org/10.1016/j.ijforecast.2024.01.002">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Alessandro Fusta Moro, Jacopo Rodeschini, Qendrim Shaboviq, Rosaria Ignaccolo, Natalia Golini, Michela Cameletti, Paolo Maranzano, Francesco Finazzi, Alessandro Fassò (2024): Spatiotemporal modelling of PM<sub>2.5</sub> concentrations in Lombardy (Italy) -- A comparative study. Environmental and Ecological Statistics <a href="https://doi.org/10.1007/s10651-023-00589-0">(DOI)</a></li>
                                             <li>Mohammadi, R., Taleai, M., <strong>Otto, P.</strong>, Sester, M. (2024): Analyzing urban crash incidents: an advanced endogenous approach using spatiotemporal weights matrix. Transactions in GIS (Accepted for Publication)</li>
+                                            <li><strong>Otto, P.</strong>, Sibbertsen, P. (2024): Spatial autoregressive fractionally integrated moving average model. Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science. Springer (accepted for publication)</li>
                                         </ul>
                                     </p>
                                     <p>
@@ -210,6 +211,12 @@
                                     <p>
                                         <ul>
                                             <li>Fassò, A., Rodeschini, J., Fusta Moro, A., Shaboviq, Q., Maranzano, P., Cameletti, M., Finazzi, F., Golini, N., Ignaccolo, R., <strong>Otto, P.</strong> (2022): AgrImOnIA: Open Access dataset correlating livestock and air quality in the Lombardy region, Italy. Zenodo <a href="https://doi.org/10.5281/zenodo.7593803">(DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <h3>Edited books</h3>
+                                    <p>
+                                        <ul>
+                                            <li> Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science. <strong>Otto, P.</strong>, Okhrin, Y., Knoth, S. (eds), Springer Heidelberg (to appear)
                                         </ul>
                                     </p>
                                     <h3>Textbooks</h3>
