--- a/research.html
+++ b/research.html
@@ -93,6 +93,7 @@
                                     </p>
                                     <p>
                                         <ul>
+                                            <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2024): Statistical process monitoring of artificial neural networks. Technometrics 66(1)<a href="https://doi.org/10.1080/00401706.2023.2239886">(DOI)</a></li>
                                             <li> Mattera, R., <strong>Otto, P.</strong> (2024): Network log-ARCH models for forecasting stock market volatility. International Journal of Forecasting <a href="https://doi.org/10.1016/j.ijforecast.2024.01.002">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Alessandro Fusta Moro, Jacopo Rodeschini, Qendrim Shaboviq, Rosaria Ignaccolo, Natalia Golini, Michela Cameletti, Paolo Maranzano, Francesco Finazzi, Alessandro Fassò (2024): Spatiotemporal modelling of PM<sub>2.5</sub> concentrations in Lombardy (Italy) -- A comparative study. Environmental and Ecological Statistics <a href="https://doi.org/10.1007/s10651-023-00589-0">(DOI)</a></li>
                                             <li>Mohammadi, R., Taleai, M., <strong>Otto, P.</strong>, Sester, M. (2024): Analyzing urban crash incidents: an advanced endogenous approach using spatiotemporal weights matrix. Transactions in GIS (Accepted for Publication)</li>
@@ -105,7 +106,6 @@
                                     <p>
                                         <ul>
                                             <li> <strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2023): A Dynamic Spatiotemporal Stochastic Volatility Model with an Application to Environmental Risks. Econometrics and Statistics <a href="https://doi.org/10.1016/j.ecosta.2023.11.002">(DOI)</a></li>
-                                            <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2023): Statistical process monitoring of artificial neural networks. Technometrics <a href="https://doi.org/10.1080/00401706.2023.2239886">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2023): Dynamic Spatiotemporal ARCH Models. Spatial Economic Analysis <a href="https://doi.org/10.1080/17421772.2023.2254817">(DOI)</a></li>
                                             <li> Fülle, M., <strong>Otto, P.</strong> (2023): Spatial GARCH Models for Unknown Spatial Locations – An Application to Financial Stock Returns. Spatial Economic Analysis <a href="https://doi.org/10.1080/17421772.2023.2237067">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Steinert, R. (2023): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics, 32:2, 696-711 <a href="https://doi.org/10.1080/10618600.2022.2107530">(DOI)</a></li>
