--- a/research.html
+++ b/research.html
@@ -93,7 +93,7 @@
                                     </p>
                                     <p>
                                         <ul>
-                                            <li><strong>Otto, P.</strong> (2024): A multivariate spatial and spatiotemporal ARCH model. Spatial Statistics <a href="https://doi.org/10.1016/j.spasta.2024.100823">(DOI)</a></li>
+                                            <li><strong>Otto, P.</strong> (2024): A multivariate spatial and spatiotemporal ARCH model. Spatial Statistics 60 <a href="https://doi.org/10.1016/j.spasta.2024.100823">(DOI)</a></li>
                                             <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2024): Statistical process monitoring of artificial neural networks. Technometrics 66(1) <a href="https://doi.org/10.1080/00401706.2023.2239886">(DOI)</a></li>
                                             <li>Mattera, R., <strong>Otto, P.</strong> (2024): Network log-ARCH models for forecasting stock market volatility. International Journal of Forecasting <a href="https://doi.org/10.1016/j.ijforecast.2024.01.002">(DOI)</a></li>
                                             <li><strong>Otto, P.</strong>, Alessandro Fusta Moro, Jacopo Rodeschini, Qendrim Shaboviq, Rosaria Ignaccolo, Natalia Golini, Michela Cameletti, Paolo Maranzano, Francesco Finazzi, Alessandro Fassò (2024): Spatiotemporal modelling of PM<sub>2.5</sub> concentrations in Lombardy (Italy) -- A comparative study. Environmental and Ecological Statistics <a href="https://doi.org/10.1007/s10651-023-00589-0">(DOI)</a></li>
