--- a/teaching.html
+++ b/teaching.html
@@ -109,7 +109,7 @@
                                     <header>
                                         <h2><a href="#">Previous courses</a></h2>
                                         <p>
-                                        Below I list all the courses I have held in the past (Leibniz University Hannover, University of Göttingen, European University Viadrina).
+                                        Below I list all the courses I have held in the past (University of Bergamo, Leibniz University Hannover, University of Göttingen, European University Viadrina).
                                     </p>
                                     </header>
                                         <section>
@@ -142,6 +142,17 @@
                                                 Leibniz University Hannover, since 2019, Master program Geodesy and Geoinformatics, and Computational Methods in Engineering
                                             </p>
                                             First, we discuss several concepts related to the reliability of networks and the temporal monitoring of spatiotemporal data. In particular, the focus is on procedures to detect deviations of an observed process from a specific target process, where the target process is a spatiotemporal stochastic process or has a complex network structure. Furthermore, statistical process control and control charts are introduced as essential tools. In the second part, the students work on a seminar paper discussing selected methods and procedures. These papers should include a literature review and a small simulation study or practical application. Then, based on a double-blind review (each participant writes a report) and discussing the results in a colloquium, the students can revise their seminar papers before the final submission.
+                                            </p>
+                                        </section>
+                                        <section>
+                                            <header>
+                                                <h3>Statistics for Digital and Organisational Innovation</h3>
+                                            </header>
+                                            <p>
+                                                University of Bergamo, Master program in Management Engineering
+                                            </p>
+                                            <p>
+                                            In this course, the student will develop statistical tools to monitor and understand innovation processes: they will learn how to compute trends and forecasts, quantify uncertainty and assess the impact of changes in the era of innovation and global warming mitigation. Working in an advanced computing environment (Matlab, R or Python), the student will learn to provide an appropriate graphical representation of data and build statistical models for descriptive, interpretative, predictive and simulation purposes. They will develop significant operational experience through participation in a working group for the development of a statistical project. In particular, the student will work with methods of time series analysis and statistical forecasting useful for describing time dynamics, predicting future short-term behaviour, and performing scenario and simulation analyses. Particular attention will be given to uncertainty assessment.
                                             </p>
                                         </section>
                                         <section>
