--- a/research.html
+++ b/research.html
@@ -93,12 +93,14 @@
                                     </p>
                                     <p>
                                         <ul>
+                                            <li><strong>Otto, P.</strong>, Dogan, O., Taspinar, S., Schmid, W., Bera, A. K. (2024): Spatial and Spatiotemporal Volatility Models: A Review. Journal of Economic Surveys (accepted)</li>
                                             <li><strong>Otto, P.</strong> (2024): A multivariate spatial and spatiotemporal ARCH model. Spatial Statistics 60 <a href="https://doi.org/10.1016/j.spasta.2024.100823">(DOI)</a></li>
                                             <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2024): Statistical process monitoring of artificial neural networks. Technometrics 66(1) <a href="https://doi.org/10.1080/00401706.2023.2239886">(DOI)</a></li>
                                             <li>Mattera, R., <strong>Otto, P.</strong> (2024): Network log-ARCH models for forecasting stock market volatility. International Journal of Forecasting <a href="https://doi.org/10.1016/j.ijforecast.2024.01.002">(DOI)</a></li>
                                             <li><strong>Otto, P.</strong>, Alessandro Fusta Moro, Jacopo Rodeschini, Qendrim Shaboviq, Rosaria Ignaccolo, Natalia Golini, Michela Cameletti, Paolo Maranzano, Francesco Finazzi, Alessandro Fassò (2024): Spatiotemporal modelling of PM<sub>2.5</sub> concentrations in Lombardy (Italy) -- A comparative study. Environmental and Ecological Statistics <a href="https://doi.org/10.1007/s10651-023-00589-0">(DOI)</a></li>
                                             <li>Mohammadi, R., Taleai, M., <strong>Otto, P.</strong>, Sester, M. (2024): Analyzing urban crash incidents: an advanced endogenous approach using spatiotemporal weights matrix. Transactions in GIS 28(2) <a href="http://doi.org/10.1111/tgis.13138">(DOI)</a></li>
                                             <li><strong>Otto, P.</strong>, Sibbertsen, P. (2024): Spatial autoregressive fractionally integrated moving average model. Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science. Springer (accepted for publication)</li>
+                                            <li>Bahlau, S., Butenhof, F., Schumacher, R., Kelm, A., Meins-Becker, A., Indorf, K., Steinmann, R., Linhard, K., <strong>Otto, P.</strong>, Nasiriboroujeni, M. (2024): BIM-Effizienz: Innovatives Kostenmanagement auf Basis objektorientierter Bauwerksmodelle. BBSR-Online-Publikation 10/2024, Bonn <a href="https://www.bbsr.bund.de/BBSR/DE/veroeffentlichungen/bbsr-online/2024/bbsr-online-10-2024.html">(html)</a></li>
                                         </ul>
                                     </p>
                                     <p>
