update + code links

--- a/cv.html
+++ b/cv.html
@@ -79,6 +79,15 @@
                                     In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/10087">6th worldwide on Scopus</a> and 1st among UK researchers.
                                     <!-- In the area of topic T.7921, "Covariance Function; Spatio-Temporal; Variogram," which constitutes my second-largest research focus, I have achieved a <a href="https://www.scival.com/trends/authors/table?uri=Topic/7921">global ranking of 76th</a>, which also places me in the 1st place among German researchers.-->
                                     </p>
+                                    <p>
+                                    My group currently consists of 6 PhD students: Franz H. Harke, Mohammadreza Nasiriboroujeni, Ariane Nidelle Meli Chrisko, Elkanah Nyabuto, Mireille Fangueng
+                                    </p>
+                                    <p>
+                                    Graduated PhD students: Miryam S. Merk (2021, Dr. rer. pol.), Anna Malinovskaya (2024, Dr.-Ing.)
+                                    </p>
+                                    <p>
+                                    Visiting PhD students and Post-Docs: Paolo Maranzano (2020, 2021, University of Milano-Bicocca), Jacopo Rodeschini (2022, University of Bergamo), Alessandro Fusta Moro (2022, University of Torino), Caterina Morelli (2024, University of Milano-Bicocca)
+                                    </p>
                                 </article>
                                 <article class="col-3 col-12-mobile special">
                                     <a href="#" class="image"><img src="images/me.jpg" alt="" /></a>
@@ -90,9 +99,10 @@
                                 <dl>
                                 <dt><b>Since 01/09/2023:</b></dt>
                                     <dd>Reader in Statistics and Data Analytics, School of Mathematics and Statistics, University of Glasgow, United Kingdom</dd>
+                                  <dt><b>Since 01/02/2023:</b></dt>
+                                  <dd>Guest Professor at the University of Bergamo, PhD course on regularised estimation methods in spatial statistics, M.Sc. course Statistics for Digital and Organisational Innovation</dd>
                                   <dt><b>01/09/2018 - 31/08/2023:</b></dt>
                                   <dd>Assistant professor of Big Geospatial Data, Institute for Cartography and Geoinformatics of the Faculty of Civil Engineering and Geodesy, Leibniz University Hannover, Germany</dd>
-                                  <dd>My group currently consists of 6 PhD students: Anna Malinovskaya, Franz H. Harke, Mohammadreza Nasiriboroujeni, Ariane Nidelle Meli Chrisko, Elkanah Nyabuto, Mireille Fangueng</dd>
                                   <dt><b>01/04/2020 - 31/03/2021:</b></dt>
                                   <dd>Visiting/interim professor of Spatial Data Analysis and Statistical Learning (full professor), Faculty of Economics, University of Göttingen</dd>
                                   <dt><b>01/01/2017 - 31/08/2018:</b></dt>
