--- a/presentations.html
+++ b/presentations.html
@@ -99,17 +99,19 @@
                                     <h3>Invited presentations at conferences (except CMStatistics)</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>2024:</strong> The Symposium on Spatiotemporal Data Science organised by Harvard University, Washington DC; COMPStat, Gießen</li>
                                             <li> <strong>2023:</strong> 35th Panhellenic and 1st International Statistics Conference, Athens</li>
+                                            <li> <strong>2019:</strong> Panel Discussion at the CODE Conference, Research Institute for Cyber Defence and Smart Data, UniBW Munich</li>
                                         </ul>
                                     </p>
                                     <h3>Invited presentations at research seminars and workshops</h3>
                                     <p>
                                         <ul>
-                                            <li> <strong>2023:</strong> Fondazione Eni Enrico Mattei, University of Milan-Bicocca, Helmut Schmidt University Hamburg</li>
-                                            <li> <strong>2022:</strong> Geoinformatics Forum University of Münster, European University Viadrina Frankfurt (Oder), International Research Training Group Hannover/Paris, </li>
+                                            <li> <strong>2023:</strong> Fondazione Eni Enrico Mattei; University of Milan-Bicocca; Helmut Schmidt University Hamburg</li>
+                                            <li> <strong>2022:</strong> Geoinformatics Forum University of Münster; European University Viadrina Frankfurt (Oder); International Research Training Group Hannover/Paris</li>
                                             <li> <strong>2021:</strong> University of Milan</li>
-                                            <li> <strong>2020:</strong> University of Bergamo, University of Augsburg</li>
-                                            <li> <strong>2019:</strong> Technische Universität Dresden, Panel Discussion at the CODE Conference, Research Institute for Cyber Defence and Smart Data, UniBW Munich</li>
+                                            <li> <strong>2020:</strong> University of Bergamo; University of Augsburg</li>
+                                            <li> <strong>2019:</strong> Technische Universität Dresden</li>
                                             <li> <strong>2018:</strong> Bergen University</li>
                                         </ul>
                                     </p>
@@ -125,6 +127,7 @@
                                     <h3>Conferences (since 2016):</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>2024:</strong> World Spatial Econometrics Conference, Groningen; COMPStat, Gießen</li>
                                             <li> <strong>2023:</strong> German Probability and Stochastic Days, Essen</li>
                                             <li> <strong>2022:</strong> World Spatial Econometrics Conference, Warsaw; metma-X, Lleida; Statistical Week Münster; CMStatistics London</li>
                                             <li> <strong>2021:</strong> Statistical Week Kiel</li>
