--- a/teaching.html
+++ b/teaching.html
@@ -217,40 +217,40 @@
                                         I have taught statistics in various Master's and Bachelor's programs.
 									</p>
 									<div class="row gtr-50">
+                                        <div class="col-4">
+                                            <a href="#" class="image fit"><img src="images/iba.jpg" alt="" /></a>
+                                        </div>
+                                        <div class="col-8">
+                                            <h4>Statistics, Data Analytics</h4>
+                                            <p>M.Sc. + undergrad, University of Glasgow</p>
+                                        </div>
 										<div class="col-4">
 											<a href="https://www.fbg.uni-hannover.de/en/studies/courses-at-the-faculty/geodesy-and-geoinformatics/" class="image fit"><img src="images/gug.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
 											<h4>Geodesy and Geoinformatics</h4>
-                                            <p>Master of Science, Leibniz University Hannover</p>
+                                            <p>M.Sc., Leibniz University Hannover</p>
 										</div>
 										<div class="col-4">
 											<a href="#" class="image fit"><img src="images/econ.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Economics</h4>
-                                            <p>Bachelor of Science, University of Göttingen</p>
-										</div>
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/iba.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>International Business Administration</h4>
-                                            <p>Bachelor of Science, European University Viadrina</p>
+											<h4>Economics, International Business Administration</h4>
+                                            <p>B.Sc., University of Göttingen, European University Viadrina</p>
 										</div>
 										<div class="col-4">
 											<a href="#" class="image fit"><img src="images/compeng.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
 											<h4>Computational Methods in Engineering</h4>
-                                            <p>Master of Science, Leibniz University Hannover</p>
+                                            <p>M.Sc., Leibniz University Hannover</p>
 										</div>
                                         <div class="col-4">
                                             <a href="#" class="image fit"><img src="images/datascience.jpg" alt="" /></a>
                                         </div>
                                         <div class="col-8">
                                             <h4>Applied Data Science</h4>
-                                            <p>Bachelor of Science, University of Göttingen</p>
+                                            <p>B.Sc., University of Göttingen</p>
                                         </div>
 									</div>
 								</section>
