--- a/cv.html
+++ b/cv.html
@@ -73,7 +73,7 @@
                             <div class="row">
                                 <article class="col-8 col-12-mobile special">
                                     <p>
-                                    Reader in Statistics and Data Analytics and top-10 researcher with an interdisciplinary profile and several publications in outstanding scientific journals (rated as top 6% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (5 ongoing, 2 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
+                                    Professor of Statistics and Data Analytics and top-10 researcher with an interdisciplinary profile and several publications in outstanding scientific journals (rated as top 6% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (5 ongoing, 2 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
                                     </p>
                                     <p>
                                     In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/10087">6th worldwide on Scopus</a> and 1st among UK researchers.
@@ -86,7 +86,7 @@
                                     Graduated PhD students: Miryam S. Merk (2021, Dr. rer. pol.), Anna Malinovskaya (2024, Dr.-Ing.)
                                     </p>
                                     <p>
-                                    Visiting PhD students and Post-Docs: Paolo Maranzano (2020, 2021, University of Milano-Bicocca), Jacopo Rodeschini (2022, University of Bergamo), Alessandro Fusta Moro (2022, University of Torino), Caterina Morelli (2024, University of Milano-Bicocca)
+                                    Visiting PhD students and Post-Docs: Paolo Maranzano (2020, 2021, University of Milano-Bicocca, Italy), Jacopo Rodeschini (2022, University of Bergamo, Italy), Alessandro Fusta Moro (2022, University of Turin, Italy), Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca, Romania), Caterina Morelli (2024, University of Milano-Bicocca, Italy), Pierfrancesco Fermani (2024, Sapienza Università di Roma)
                                     </p>
                                 </article>
                                 <article class="col-3 col-12-mobile special">
@@ -97,10 +97,12 @@
                             <h3>Scientific career</h3>
 							<p>
                                 <dl>
-                                <dt><b>Since 01/09/2023:</b></dt>
-                                    <dd>Reader in Statistics and Data Analytics, School of Mathematics and Statistics, University of Glasgow, United Kingdom</dd>
-                                  <dt><b>Since 01/02/2023:</b></dt>
-                                  <dd>Guest Professor at the University of Bergamo, PhD course on regularised estimation methods in spatial statistics, M.Sc. course Statistics for Digital and Organisational Innovation</dd>
+                                    <dt><b>Since 01/08/2024:</b></dt>
+                                    <dd>Professor of Statistics and Data Analytics, School of Mathematics and Statistics, University of Glasgow, United Kingdom</dd>
+                                    <dt><b>Since 01/02/2023:</b></dt>
+                                    <dd>Guest/Visiting Professor at the University of Bergamo, PhD course on regularised estimation methods in spatial statistics, M.Sc. course Statistics for Digital and Organisational Innovation</dd>
+                                    <dt><b>01/09/2023 - 31/07/2024:</b></dt>
+                                    <dd>Associate Professor (Reader) in Statistics and Data Analytics, School of Mathematics and Statistics, University of Glasgow, United Kingdom</dd>
                                   <dt><b>01/09/2018 - 31/08/2023:</b></dt>
                                   <dd>Assistant professor of Big Geospatial Data, Institute for Cartography and Geoinformatics of the Faculty of Civil Engineering and Geodesy, Leibniz University Hannover, Germany</dd>
                                   <dt><b>01/04/2020 - 31/03/2021:</b></dt>
