--- a/cv.html
+++ b/cv.html
@@ -73,7 +73,7 @@
                             <div class="row">
                                 <article class="col-8 col-12-mobile special">
                                     <p>
-                                    Professor of Statistics and Data Analytics and top-10 researcher with an interdisciplinary profile and several publications in outstanding scientific journals (rated as top 6% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (5 ongoing, 2 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
+                                    Professor of Statistics and Data Science and top-10 researcher with an interdisciplinary profile and several publications in outstanding scientific journals (rated as top 6% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (5 ongoing, 2 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
                                     </p>
                                     <p>
                                     In my main research area (topic T.6863 "Spillover Effect; Panel Study; Autoregressive Model"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/6863">6th worldwide on Scopus</a> and 1st among UK researchers.
@@ -98,7 +98,7 @@
 							<p>
                                 <dl>
                                     <dt><b>Since 01/08/2024:</b></dt>
-                                    <dd>Professor of Statistics and Data Analytics, School of Mathematics and Statistics, University of Glasgow, United Kingdom</dd>
+                                    <dd>Professor of Statistics and Data Science, School of Mathematics and Statistics, University of Glasgow, United Kingdom</dd>
                                     <dt><b>Since 01/02/2023:</b></dt>
                                     <dd>Guest/Visiting Professor at the University of Bergamo, PhD course on regularised estimation methods in spatial statistics, M.Sc. course Statistics for Digital and Organisational Innovation</dd>
                                     <dt><b>01/09/2023 - 31/07/2024:</b></dt>
