--- a/research.html
+++ b/research.html
@@ -227,7 +227,7 @@
                                     <h3>Edited books</h3>
                                     <p>
                                         <ul>
-                                            <li> Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science. <strong>Otto, P.</strong>, Okhrin, Y., Knoth, S. (eds), Springer Heidelberg (to appear)
+                                            <li> Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science -- Essays in Honour of Wolfgang Schmid. Knoth, S., Okhrin, Y., <strong>Otto, P.</strong> (eds), Springer Heidelberg <a href="https://link.springer.com/book/9783031691102">(Springer Link)</a>
                                         </ul>
                                     </p>
                                     <h3>Textbooks</h3>
